<resources>
    <string name="app_name">PRemote</string>
    <string name="mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="signUp">Sign up</string>
    <string name="forgotPass">Forgot Password</string>
    <string name="wrongMailFormat">Wrong mail formatting!</string>
    <string name="wrongPasswordFormat">Wrong Password Formatting!</string>
    <string name="enterMail">Please enter mail</string>
    <string name="enterPassword">Enter your Password!</string>
    <string name="unknownError">Unknown Error, Please try again later</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_commands">Commands</string>
    <string name="title_settings">Settings</string>
    <string name="mail_change_success">Mail changed successfuly</string>
    <string name="pass_change_success">Password changed successfuly</string>
    <string name="hello">Hello</string>
    <string name="send">Send</string>
    <string name="commandToSend">Command to send</string>
    <string name="commandSendSuccess">command is sent :)</string>
    <string name="startCommanding">Start giving command</string>
    <string name="recognizedAs">Your voice is recognized as:</string>
    <string name="wantToContinue">. do you want to send this command?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="sign_out">Sign out</string>
    <string name="search_for_command">Search for command</string>
    <string name="forgot_password">forgot password?</string>
    <string name="recover"> Recover </string>
    <string name="password_reset_sent">Password reset link has been sent to your email! :)</string>
    <string name="display_name">Display name</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="enterName">Please enter display name</string>
    <string name="wrongNameFormat">Please enter valid name</string>
    <string name="passNotMatch">Passwords does not match</string>
</resources>
